minio/minio-dev/minio-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: minio-dev
  namespace: "minio-dev"
  labels:
    app.kubernetes.io/instance: minio-dev
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: minio
    app.kubernetes.io/version: 2024.2.26
    helm.sh/chart: minio-13.7.0
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: minio-dev
      app.kubernetes.io/name: minio
  policyTypes:
  - Ingress
  - Egress
  egress:
  - {}
  ingress:
  # Allow inbound connections
  - ports:
    - port: 9001
    - port: 9000
